# demlabs

./: CMakeLists.txt  main.cpp  main.qml
qml/: main.qml  qml.qrc
src/: CMakeLists.txt  main.cpp
src/commands_handler/: CMakeLists.txt  commands_handler.cpp  commands_handler.h
src/communication_module/: CMakeLists.txt  communication_module.cpp  communication_module.h
